changed contact email to samtools-dev

--- a/CRAMv3.0.tex
+++ b/CRAMv3.0.tex
@@ -30,7 +30,7 @@
 
 \input{CRAMv3.0.ver}
 \title{CRAM format specification (version 3.0)}
-\author{cram-dev@ebi.ac.uk}
+\author{samtools-devel@lists.sourceforge.net}
 \date{\headdate}
 % \maketitle
 
