Fixed typo in EOF block example.

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -807,7 +807,7 @@ name}\tabularnewline
 \hline
 0f 00 00 00 & integer & 15 & size of blocks data\tabularnewline
 \hline
-ff ff ff ff f0 & itf8 & -1 & ref seq id\tabularnewline
+ff ff ff ff 0f & itf8 & -1 & ref seq id\tabularnewline
 \hline
 e0 45 4f 46 & itf8 & 4542278 & alignment start\tabularnewline
 \hline
