Very minor SAMv1.tex formatting improvements
Fix "This printing is..." subheading line break.
Remove some excess page breaks.

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -18,7 +18,7 @@
 \maketitle
 \begin{quote}\small
 The master version of this document can be found at
-\url{https://github.com/samtools/hts-specs}.
+\url{https://github.com/samtools/hts-specs}.\\
 This printing is version~\commitdesc\ from that repository,
 last modified on the date shown above.
 \end{quote}
@@ -73,8 +73,6 @@ r003 2064 ref 29 17 6H5M       *  0   0 TAGGC             * SA:Z:ref,9,+,5S6M,30
 r001  147 ref 37 30 9M         =  7 -39 CAGCGGCAT         * NM:i:1
 \end{verbatim}
 \end{framed}
-
-\pagebreak
 
 \subsection{Terminologies and Concepts}
 
@@ -640,8 +638,6 @@ The $3'$ fragment & 947 (0x3B3) & 85052 & \tt 303M & \tt FI:i:3\quad TC:i:3
   two segments in SAM.
   \end{enumerate}
 \end{enumerate}
-
-\pagebreak
 
 \section{Guide for Describing Assembly Sequences in SAM}
 
