CRAM: Fixed tabulation of block compression method.

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -469,8 +469,8 @@ have the following header structure with the data stored in the `block data' fie
 byte & method & the block compression method: \linebreak{}
 0: raw (none)*\linebreak{}
 1: gzip\linebreak{}
-2: bzip2\tabularnewline
-3: lzma\tabularnewline
+2: bzip2\linebreak{}
+3: lzma\linebreak{}
 4: rans\tabularnewline
 \hline
 byte & block content type id & the block content type identifier\tabularnewline
